--- a/index.html
+++ b/index.html
@@ -98,9 +98,8 @@
 
 			<div id="footer">
 				<div class="left">
-					<!--<p>This is <strong>Parallelism</strong>, a responsive portfolio site template by <a href="http://html5up.net">HTML5 UP</a>. Free for personal<br />
-					and commercial use under the <a href="http://html5up.net/license">Creative Commons Attribution</a> license.</p>-->
-				</div>
+					<p>Hi, I am <strong>Keerthi Reddy.</strong>I post my art here.</br>
+				Created by <strong>Anudeep Reddy</strong></p>				</div>
 				<div class="right">
 					<ul class="contact">
 						<li><a href="https://www.instagram.com/keerthi_reddy44" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
