change to credit

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 			<div id="footer">
 				<div class="left">
-					<p>Hi, I am <strong>Keerthi Reddy.</strong>I post my art here.</br>
+					<p>Hi, I am <strong>Keerthi Reddy.</strong> I Draw better than i talk.</br>
 				Created by <strong>Anudeep Reddy</strong></p>				</div>
 				<div class="right">
 					<ul class="contact">
