--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						</article>
 
 						<article class="item thumb" data-width="375">
-							<h2>Me My Myself</h2>
+							<h2>I My Myself</h2>
 							<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a>
 						</article>
 
